--- a/src/style.css
+++ b/src/style.css
@@ -10,34 +10,58 @@ h1{
 
 #titleOne{
     width:16%;
-    background-color:#c0c0c0;
+    background-color:#f1f1f1;
     padding:2%;
     text-align:center;
     font-family: Montserrat;
     float:left;
     position:relative;
     font-size:2vw;
+    height:3.1vh;
 
 }
 #titleTwo{
     width:76%;
+    height:3.1vh;
     float:right;
-    background-color:#FFA500;
+    background-color:rgb(250, 191, 83);
     padding:2%;
     font-family: Raleway;
     text-align:left;
     position:relative;
     font-size:2vw;
 }
+
+#dash{
+    display:none;
+}
+
  #options{
     width:20%;
-    height:100%;
-    float:left;
-    background: color #c0c0c0;
+    height:30vh;
     font-family:Righteous;
     text-align: left;
-
+    position: static;
+    float: left;
 } 
+#courses, #cohorts, #dashboard{
+    background-color: #f1f1f1;
+    font-size:1.5vw;
+    width:100%;
+    height: 30%;
+    padding:5% 0;
+    text-align: center;
+
+}
+ul li:hover {background: #555;}
+
+#loginInfo{
+    background-color:#ffffff;
+    float:left;
+    width:90%;
+    padding: 5%;
+}
+
 #citys{
     display:none;
 
@@ -50,7 +74,16 @@ ul{
 }
 #info{
     width:80%;
-    margin:2%;
+    height:100%;
+    text-align: left;
+    float:right;
+    display:none;
+}
+.align{
+    float: unset;
+    width:20%;
+    text-align:center;
+    display:block;
 }
 #promo{
     width:10%;
@@ -59,21 +92,19 @@ ul{
 #student{
     width:20%;
 }
-#courses, #cohorts, #dashboard{
-    background-color:#c0c0c0;
-    font-size:1.5vw;
-    width:100%;
-    padding:5% 0;
-    text-align: center;
-}
-ul li:hover {background: #555;}
+button {
+    transition-duration: 0.4s;
+    background-color: #ffffff;
+    width: 1vw;
+    height:3vh;
+    font-family: Raleway;
+    font-size:1vw;
+    margin-top:1vh;
+    
 
-#loginInfo{
-    background-color:#ffffff;
-    float:left;
-    width:90%;
-    padding: 5%;
 }
-#nav{
-    overflow: hidden;
+
+button:hover {
+    background-color: rgb(248, 205, 126);
+    color: white;
 }
