diseño css y html

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,11 @@
-/* Encabezado */
 
+/* Encabezado */
+body{
+    margin-left:0;
+    top:0;
+}
 header {
-    overflow: hidden;
+    top:0;
 }
 
 h1{
@@ -12,31 +16,50 @@ h1{
 
 #titleOne{
     width:16%;
-    background-color:#f1f1f1;
+    background-color:#FFFFFF;
     padding:2%;
-    text-align:center;
-    font-family: Montserrat;
     float:left;
     position:relative;
-    font-size:2vw;
-    height:3.1vh;
+    height:3.5vh;
 
+}
+#logoLaboratoria{
+    width:15vw;
+    position: relative;
+    margin-top:0;
+    float:left;
 }
 
 #titleTwo{
     width:76%;
-    height:3.1vh;
+    height:3.5vh;
     float:right;
-    background-color:rgb(250, 191, 83);
+    background-color:rgb(255, 229, 33);
     padding:2%;
     font-family: Raleway;
     text-align:left;
     position:relative;
     font-size:2vw;
+    
 }
 
-#dash{
+#dash, #cohortsH{
     display:none;
+    
+}
+#dash{
+    width:98%;
+    float:left;
+    position:relative;
+    text-align: left;
+}
+#cohortsH{
+    width:25vw;
+    float:right;
+    text-align: right;
+    margin-top:0;
+    padding:0;
+    position: relative;
 }
 
 /*  >> SECTION */
@@ -51,29 +74,40 @@ h1{
     position: static;
     float: left;
 }
+#loginInfo{
 
-#imgUser{
-     width:30px;
-     height:30px;
-     border-radius: 50% ;
-     margin: 10px 0px 10px 5px;
+    padding:5vh 0;
+    margin-right:3vw;
+    margin-left:1vw;
+    font-size:1vw;
+}
+#imgUser {
+    border-radius: 6vw 10vh;
+    width: 4.4vw;
+    height:8vh;
+    float:left;
+    margin-left:1vw;
 }
 
-#loginInfo , #ocupationUser{
+#loginName{
     background-color:#ffffff;
-    float:left;
-    width:90%;
-    padding: 5%;
+    float:right;
 }
 
 /* Division de botones */
+nav{
+    margin-top:9vh;;
+}
+#courses:hover{background:rgb(255,229,33);}
+#cohorts:hover{background:rgb(255,229,33);}
+#dashboard:hover{background:rgb(255,229,33);}
 
 #courses, #cohorts, #dashboard{
     background-color: #f1f1f1;
     font-size:1.5vw;
     width:100%;
-    height: 30%;
-    padding:5% 0;
+    padding:2vh 0;
+    margin-top:1vh;
     text-align: center;
 }
 
@@ -95,11 +129,13 @@ ul{
 /* Desplegable de promociones Laboratoria*/
 
 #info{
+    background-color:	#708090;
     width:80%;
     height:100%;
     text-align: left;
     float:right;
     display:none;
+    margin-bottom: 2%;
 }
 
 #promo{
@@ -108,15 +144,18 @@ ul{
 }
 
 /* Botones */
-
-.align{
-    float: unset;
-    width:50%;
-    text-align:center;
-    display:block;
+#buttons{
+    display:none;
 }
 
-button {
+.align{
+    width:20%;
+    text-align:center;
+    display:block;
+    position: relative;
+}
+
+/* button {
     transition-duration: 0.4s;
     background-color: #ffffff;
     width: 1vw;
@@ -124,12 +163,12 @@ button {
     font-family: Raleway;
     font-size:1vw;
     margin-top:1vh;
-}
+} */
 
-button:hover {
+/* button:hover {
     background-color: rgb(248, 205, 126);
     color: white;
-}
+} */
 
 /* #student{
     width:20%;
@@ -137,31 +176,55 @@ button:hover {
 
 
 /* Css de los graficos  */
-
-.images_desp{
-    display: flex;
-    justify-content: space-around;
-    margin: 40px 0;
+#imageCircle{
+    position: absolute;
+    margin:1vh;
+    margin-bottom:3%;
+    margin-left: 22%;
+    margin-top:3%;
 }
-
-.images_desp figure{
-    margin: 0px 20px;
-    width: 20%;
-    padding: 15px;
-    border: 1px solid rgb(161, 161, 161);
-    border-radius: 3px;
-
+#graphic{
+    width:22vw;
+    height:40vh;
 }
-
-.images_desp figure img{
-    height: 200px;
-    width: 100%;
-    margin:0 auto;
+#mostrar2{
+    font-family: Righteous;
+    font-size:bold;
+    height:2vh;
+    display:block;
+    color:#161616;
+    background-color:#FFFFFF;
+    width:7vw;
+    height:4vh;
+    float:right;
+    border-color:rgb(250, 224, 26);
 }
 
 .titulo{
     font-family: Montserrat;
     font-weight: bold;
-    font-size: 25px;
-    text-align:center;
+    position:relative;
 }
+#resultTitle{
+    position: relative;
+    font-family: Righteous;
+}
+#prueba2{
+    position: absolute;
+}
+footer {
+    position:fixed;
+    bottom:0;
+    top:94%;
+    width:100%;
+    height:4vh;   /* Height of the footer */
+    background: #000000;
+    text-align: center;
+    text-align-last: center;
+    padding-top:2vh;
+    font-family: Montserrat;
+    color: #ffffff;
+    font-size:80%;
+    margin-left:0;
+
+ }
