--- a/src/style.css
+++ b/src/style.css
@@ -203,11 +203,7 @@ button {
     font-family: Righteous;
 }
 
-#prueba2{
-    position: absolute;
-}
-
-#promExercises{
+#prueba2 , #promExercises , #promTotalExercises{
     position: absolute;
 }
 
@@ -216,22 +212,21 @@ button {
 #tableauStudents{
     height: 120px;
     width: 100%;
-    /* position: absolute; */
+    position: absolute;
 }
     
 .listStudents{
     height: 100px;
-    width: 64%;
+    width: 25%;
     float:left;
-    margin:2% ;
     margin: 2% 2% 2% 4% ;
-    }
+}
     
 .averageExercises{
     height: 100px;
-    width: 24%;
+    width: 20%;
     float:left;
-    margin: 2% 4% 2% 2% ;
+    margin: 2% 4% 2% 35% ;
 }
 
 /* Pie de Pagina */
