--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
 body{
     margin-left:0;
     top:0;
+    background-color: #f1f1f1;
 }
 
 /* ENCABEZADO */
@@ -67,11 +68,12 @@ h1{
 
 #options{
     width:20%;
-    height:30vh;
+    height:80vh;
     font-family:Righteous;
     text-align: left;
     position: static;
     float: left;
+    background-color: #FFFFFF;
 }
 #loginInfo{
 
@@ -98,6 +100,7 @@ nav{
 #cohorts:hover{background:rgb(255,229,33);}
 #dashboard:hover{background:rgb(255,229,33);}
 #courses, #cohorts, #dashboard{
+    border-radius: 2.5vh ;
     background-color: #f1f1f1;
     font-size:1.5vw;
     width:100%;
@@ -126,6 +129,7 @@ ul{
     float:right;
     display:none;
     margin-bottom: 2%;
+
 }
 
 /* #promo{
@@ -146,7 +150,9 @@ ul{
     margin-bottom:3%;
     margin-left: 22%;
     margin-top:3%;
-    width:80%;
+    background-color: #FFFFFF;
+    border-style:solid;
+    padding-bottom:5vh;
 }
 
 .titulo{
@@ -156,23 +162,24 @@ ul{
 }
 
 #graphic{
-    width:280px;
-    height:280px;
+    width:15vw;
+    height:28vh;
 
 }
+
 #mostrar2{
     font-family: Righteous;
     font-size:bold;
-    height:2vh;
     display:block;
     color:#161616;
     background-color:#FFFFFF;
-    width:7vw;
+    width:10vw;
     height:4vh;
-    float:right;
     border-color:rgb(250, 224, 26);
+    position:fixed;
+    margin-left:30vw;
+    bottom:25vh;
 }
-
 
 /* Botones */
 
@@ -201,8 +208,22 @@ button {
 #resultTitle{
     position: relative;
     font-family: Righteous;
+    width:15vw;
+    height:4vh;
+    font-size:1vw;
 }
-
+#infoTitle{
+    font-family: Montserrat;
+    font-size: 1,5vw;
+    margin-left:3vw;
+    margin-top:3vh;
+}
+#promTotalExercises{
+    margin-left:50%;
+    font-size:1vw;
+    font-family: Montserrat;
+    position:relative;
+}
 #prueba2 , #promExercises , #promTotalExercises{
     position: absolute;
 }
