--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@ h1{
 }
 #titleOne{
     width:16%;
-    background-color:#FFFFFF;
+    background:#f1f1f1;;
     padding:2%;
     float:left;
     position:relative;
@@ -43,7 +43,7 @@ h1{
     font-size:2vw;
     
 }
-#dash, #cohortsH{
+#dash, #cohortsH1{
     display:none;
     
 }
@@ -53,7 +53,7 @@ h1{
     position:relative;
     text-align: left;
 }
-#cohortsH{
+#cohortsH1{
     width:25vw;
     float:right;
     text-align: right;
@@ -167,7 +167,7 @@ ul{
 
 }
 
-#mostrar2{
+#insideExercises{
     font-family: Righteous;
     font-size:bold;
     display:block;
@@ -225,17 +225,12 @@ button {
     position:relative;
     font-weight: bold;
 }
-#prueba2 , #promExercises , #promTotalExercises{
+#students , #promExercises , #promTotalExercises{
     position: absolute;
 }
 
 /* Tabla de lista de estudiantes */
 
-#tableauStudents{
-    height: 120px;
-    width: 100%;
-    position: absolute;
-}
     
 .listStudents{
     height: 100px;
