--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,3 @@
-
-
 body{
     margin-left:0;
     top:0;
@@ -93,13 +91,18 @@ h1{
     background-color:#ffffff;
     float:right;
 }
+
+
+
 nav{
     margin-top:9vh;;
 }
+
+
 #courses:hover{background:rgb(255,229,33);}
-#cohorts:hover{background:rgb(255,229,33);}
+#selectCohorts:hover{background:rgb(255,229,33);}
 #dashboard:hover{background:rgb(255,229,33);}
-#courses, #cohorts, #dashboard{
+#courses, #selectCohorts, #dashboard{
     border-radius: 2.5vh ;
     background-color: #f1f1f1;
     font-size:1.5vw;
@@ -109,6 +112,7 @@ nav{
     text-align: center;
 }
 ul li:hover {background: #555;}
+
 #citys{
     display:none;
 }
@@ -117,6 +121,13 @@ ul{
     margin:0;
     padding:0;
 }
+
+#selectCohorts option{
+    background: rgb(247, 240, 143);
+    font-size:80%;
+}
+
+
 
 #info{
     width:78%;
@@ -128,6 +139,10 @@ ul{
     margin-left:2%;
 
 }
+
+/* #enProceso{
+    display: none ;
+} */
 
 
 .search{
@@ -189,3 +204,16 @@ footer {
     margin-left:0;
 
 }
+
+/* #selectCohorts {
+    width:100%;
+    background-color: #f1f1f1; 
+    border-radius: 2.5vh ;
+    font-size:1.5vw;
+    padding:2vh 0;
+    margin-top:1vh;
+    text-align: center;
+} */
+
+
+
