--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,50 @@
 body{
-    margin-left:0;
+    margin:0;
     top:0;
     background-color: #f1f1f1;
 }
+
+h2{
+    text-align: center;
+    margin-bottom: 20px;
+    color: rgba(0,0,0,0.5);
+}
+
+input{
+    display: block;
+    padding:10px;
+    width:100%;
+    margin : 30px 0;
+    font-size:20px;
+}
+
+input[type="button"]{
+    background: linear-gradient(#FFDA63, #FFB940);
+    border:0 ;
+    color: brown;
+    opacity:0.8;
+    cursor:pointer;
+    border-radius: 40px;
+    margin-bottom:  0 ;
+}
+  
+input[type="button"]:hover {
+    opacity: 1;
+}
+  
+input[type="button"]:active {
+transform: scale(0.95);
+ }
+
+form {
+    margin:auto;
+    width: 50%;
+    max-width: 500px;
+    background: rgb(255, 229, 33);
+    padding : 30px;
+    border: 1px solid rgba(0,0,0,0.2);
+  }
+  
 
 /* ENCABEZADO */
 
@@ -215,5 +257,21 @@ footer {
     text-align: center;
 } */
 
-
+@media (max-width:768px) {
+    form{
+      width:75%;
+    }
+  }
+  
+  @media (max-width:768px) {
+    form {
+      width:75%;
+    }
+  }
+  
+  @media(max-width:480px){
+     form{
+        width:90%;
+      }
+  }
 
