--- a/src/style.css
+++ b/src/style.css
@@ -182,9 +182,9 @@ ul{
 
 }
 
-/* #enProceso{
+#studentsBox{
     display: none ;
-} */
+}
 
 
 .search{
@@ -197,7 +197,7 @@ ul{
     font-weight: bold;
     position:relative;
 }
-/* 
+
 #imageCircle{
     position: absolute;
     margin:1vh;
@@ -207,12 +207,12 @@ ul{
     background-color: #FFFFFF;
     border-style:solid;
     padding-bottom:5vh;
-} */
-/* #graphic{
+}
+#graphic{
     width:15vw;
     height:28vh;
 
-} */
+}
 
 button {
     transition-duration: 0.4s;
@@ -247,7 +247,12 @@ footer {
 
 }
 
-/* #selectCohorts {
+
+#tableClass{
+    display:none;
+}
+
+#selectCohorts {
     width:100%;
     background-color: #f1f1f1; 
     border-radius: 2.5vh ;
@@ -255,7 +260,7 @@ footer {
     padding:2vh 0;
     margin-top:1vh;
     text-align: center;
-} */
+}
 
 @media (max-width:768px) {
     form{
